--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <td><img src="images/kreisfoto.png" alt="Profilbild Stefan" width="200"></td>
       <td>
         <h1>Stefan Ackermann</h1>
-        <p><em>Fachinformatiker - Systemintegration für <strong><a href="https://www.rasselbande-kruft.de">Kindertagespflege Rasselbande Kruft</a></strong></em></p>
+        <p><em>Fachinformatiker - Systemintegration für <strong><a href="http://www.rasselbande-kruft.de">Kindertagespflege Rasselbande Kruft</a></strong></em></p>
         <p>angehender Web Entwickler</p>
       </td>
     </tr>
